<resources>
    <string name="app_name">DummyCalc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="six">3</string>
    <string name="equals">=</string>



</resources>
