<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0.0"
        android:id="@+id/numberReadout"
        android:layout_below="@+id/textView"
        android:layout_marginTop="43dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/two"
        android:text="@string/two"
        android:layout_alignTop="@+id/one"
        android:layout_toRightOf="@+id/one"
        android:layout_toEndOf="@+id/one" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/one"
        android:text="@string/one"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/three"
        android:text="@string/three"
        android:layout_alignTop="@+id/two"
        android:layout_toRightOf="@+id/two"
        android:layout_toEndOf="@+id/two" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/plus"
        android:text="@string/plus"
        android:layout_alignTop="@+id/minus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="4"
        android:id="@+id/four"
        android:layout_below="@+id/two"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="5"
        android:id="@+id/five"
        android:layout_below="@+id/two"
        android:layout_toRightOf="@+id/four"
        android:layout_toEndOf="@+id/four" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="6"
        android:id="@+id/six"
        android:layout_alignBottom="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five"
        android:layout_below="@+id/two" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="-"
        android:id="@+id/minus"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/plus"
        android:layout_toEndOf="@+id/plus" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="="
        android:id="@+id/equals"
        android:layout_below="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five" />


</RelativeLayout>
